--- a/docs/styles.css
+++ b/docs/styles.css
@@ -3,10 +3,9 @@
 body {
     background-color: hsl(217, 54%, 11%);
     font-family: "Outfit";
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    display: grid;
+    place-items: center;
+    min-height: 100vh;
 }
 
 p {
